tests/ui/typeck/if-else-type-mismatch-chain.stderr
error[E0308]: `if` and `else` have incompatible types
  --> $DIR/if-else-type-mismatch-chain.rs:7:9
   |
LL |       let _v = if let Some(a) = oa {
   |  ______________-
LL | |         Some(&a)
   | |         -------- expected because of this
LL | |     } else if let Some(a) = oa2 {
LL | |         &Some(a)
   | |         ^^^^^^^^ expected `Option<&{integer}>`, found `&Option<{integer}>`
LL | |     } else {
LL | |         None
LL | |     };
   | |_____- `if` and `else` have incompatible types
   |
   = note:   expected enum `Option<&{integer}>`
           found reference `&Option<{integer}>`
help: try using `.as_ref()` to convert `&Option<{integer}>` to `Option<&{integer}>`
   |
LL -         &Some(a)
LL +         Some(a).as_ref()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
